--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             <li>banana</li>
             <li>orange</li>
             <li>apple</li>
-        </module one>        
+        </module one>
+        <module three>
+            <li>monkey</li>
+        </module three>        
     </body>
 </html>
