--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
             <li>banana</li>
             <li>orange</li>
             <li>apple</li>
-        </module one>        
+        </module two>        
     </body>
 </html>
